Updated privacy, conditions and about

--- a/conditions.html
+++ b/conditions.html
@@ -19,7 +19,7 @@
     <header>
         <div class="nav-bar d-flex flex-row align-items-center justify-content-between px-3">
             <div>
-                <a href="">
+                <a href="index.html">
                     <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="" style="width: 5em;">
                 </a>
             </div>
@@ -30,7 +30,6 @@
             </div>
         </div>
     </header>
-
 
     <nav class="container-menu">
         <button id="close-menu" class="close-menu">
@@ -51,7 +50,235 @@
     </nav>
 
 <main>
-    <div>ola ke ase</div>
+    <div class="px-5">
+        <h1>
+            Condiciones de servicio de Pawchontli
+        </h1>
+        <p>
+                Esta página contiene las políticas de nuestro sitio para lo siguiente:
+
+                TÉRMINOS GENERALES Y CONDICIONES
+
+                NOTIFICACIÓN DE INFRACCIÓN DE DERECHOS DE AUTOR
+
+                TÉRMINOS Y CONDICIONES DE CONTENIDO GENERADO POR EL USUARIO
+
+                POLÍTICA DE VINCULACIÓN
+
+                MIEMBRO DEL REFUGIO - TÉRMINOS Y CÓDIGO DE CONDUCTA ADICIONALES
+
+<br>
+
+                Gracias por visitar este sitio web (el "Sitio" o "sitio web"). Lea atentamente los Términos y
+                condiciones contenidos en este documento, ya que cualquier uso de este sitio constituye su aceptación de
+                los Términos y condiciones aquí establecidos. Si no está de acuerdo con estos términos y condiciones, no
+                utilice este sitio web.
+
+                En este sitio, los términos "nosotros", "nos", "nuestro" y "Pawchontli se refieren a Pawchontli, una
+                división de Nestlé Purina PetCare Company, una corporación de Missouri. "Usted" se refiere a cualquier
+                persona que acceda y / o utilice este sitio web.
+
+                Nota: Pawchontli puede revisar estos términos y condiciones actualizando esta publicación. Léalos
+                detenidamente.
+
+                <br>
+
+                1. Aviso de privacidad
+
+                Cualquier información personal o material enviado a este sitio web está sujeto a los términos y
+                condiciones establecidos en nuestra Política de privacidad. Le recomendamos que lo lea y consulte antes
+                de enviar cualquier información personal a este Sitio. La Política de privacidad es parte de estos
+                términos y condiciones.
+
+                <br>
+
+                2. Exactitud, integridad y actualidad de la información
+
+                No somos responsables si la información que ponemos a disposición en este sitio web no es precisa o
+                completa. Cualquier confianza en el material de este sitio web será bajo su propio riesgo. Usted acepta
+                que es su responsabilidad monitorear cualquier cambio en el material y la información contenida en este
+                sitio web.
+
+                <br>
+
+                3. Envíos a este sitio
+
+                Cualquier comunicación o material no personal que envíe a este sitio web por correo electrónico, carga o
+                de otro modo, incluidos datos, preguntas, comentarios, sugerencias o similares ("Envíos") son y serán
+                tratados como no confidenciales y no propietario. Todo lo que envíe o publique se convierte en propiedad
+                de Pawchontli y Pawchontli puede usar y reproducir dicho Envío libremente y para cualquier propósito.
+                Específicamente, Pawchontli es de uso gratuito para cualquier propósito (incluido, entre otros, el
+                desarrollo, la fabricación, la publicidad y la comercialización de productos) cualquier idea, obra de
+                arte, invenciones, desarrollos, sugerencias o conceptos contenidos en cualquier Envío que envíe a este
+                sitio web. Dicho uso no incluirá publicidad dirigida a criadores. Cualquier uso de este tipo es sin
+                compensación para la parte que envía la información. Al realizar un Envío, también garantiza que es
+                propietario del material / contenido enviado, que no es difamatorio y que el uso de Pawchontli no
+                violará los derechos de ningún tercero ni nos colocará en incumplimiento de las leyes aplicables.
+                Pawchontli no tiene la obligación de utilizar la información enviada.
+
+                <br>
+
+                4. Derechos de propiedad intelectual
+
+                Todos los derechos de autor, marcas comerciales y otros derechos de propiedad intelectual en todos los
+                textos, imágenes y otros materiales de este sitio web son propiedad de Pawchontli o se incluyen con el
+                permiso del propietario correspondiente.
+
+                Se le permite navegar por este sitio web, reproducir extractos mediante impresión, descarga a un disco
+                duro o con el fin de distribuirlos a otras personas. Esto solo debe hacerse con la condición de que
+                mantenga intactos todos los avisos de derechos de autor y otros avisos de propiedad y que el aviso de
+                marca comercial a continuación aparezca en dichas reproducciones. Ninguna reproducción de cualquier
+                parte de este sitio web puede venderse o distribuirse con fines comerciales ni debe modificarse o
+                incorporarse en ningún otro trabajo, publicación o sitio web.
+
+                <br>
+
+                5. Enlaces a otros sitios web
+
+                Los enlaces en los sitios web de Pawchontli pueden llevarlo fuera de la red y los sistemas de Pawchontli
+                y Pawchontli no acepta responsabilidad por el contenido, la precisión o la función de estos otros sitios
+                web de terceros. Los enlaces se proporcionan de buena fe y Petfinder no se hace responsable de ningún
+                cambio posterior en otros sitios web de terceros a los que proporcionamos un enlace. La inclusión de
+                cualquier enlace a otros sitios web no implica el respaldo de Petfinder. Le recomendamos encarecidamente
+                que conozca y lea atentamente los avisos legales y de privacidad de todos los demás sitios web que
+                visite.
+
+                <br>
+
+                6. Garantías y exenciones de responsabilidad
+
+                El uso de este sitio web es bajo su propio y exclusivo riesgo.
+
+                Garantías
+
+                ESTE SITIO WEB SE LE PROPORCIONA "TAL CUAL" Y "SEGÚN DISPONIBILIDAD" Y, EN CONSECUENCIA, PAWCHONTLI NO
+                OFRECE GARANTÍAS DE NINGÚN TIPO, YA SEA EXPRESA, IMPLÍCITA, ESTATUTARIA O DE OTRO MODO, INCLUYENDO, PERO
+                NO LIMITADO A, LAS GARANTÍAS IMPLÍCITAS DE COMERCIALIZACIÓN CALIDAD SATISFACTORIA Y APTITUD PARA UN
+                PROPÓSITO EN PARTICULAR INCLUYENDO GARANTÍAS O REPRESENTACIONES DE QUE EL MATERIAL DE ESTE SITIO WEB
+                SERÁ COMPLETO, EXACTO, CONFIABLE, OPORTUNO, SIN INFRACCIÓN PARA TERCEROS, QUE EL ACCESO A ESTE SITIO WEB
+                SERÁ LIBRE O INTERRUMPIDO LIBRE DE VIRUS, QUE ESTE SITIO WEB SERÁ SEGURO, QUE CUALQUIER CONSEJO U
+                OPINIÓN OBTENIDA DE PAWCHONTLI A TRAVÉS DE ESTE SITIO WEB ES EXACTO O DEBE SER DE CONFIANZA Y CUALQUIER
+                REPRESENTACIÓN O GARANTÍA DE ESTE TEMA SE RECHAZA EXPRESAMENTE.
+
+                Tenga en cuenta que algunas jurisdicciones pueden no permitir exclusiones de garantías implícitas, por
+                lo que es posible que algunas de estas exclusiones no se apliquen en su caso. Consulte las leyes
+                locales.
+
+                Nos reservamos el derecho de restringir, suspender o cancelar sin previo aviso su acceso a este sitio
+                web o cualquier característica de este sitio web o cualquier característica o parte del mismo en
+                cualquier momento.
+
+                <br>
+
+                7. Salud, estado físico y nutrición de las mascotas
+
+                Este Sitio puede contener de vez en cuando información relacionada con la nutrición y diversas
+                condiciones médicas, de salud y estado físico de las mascotas y su tratamiento. Esto es solo para fines
+                informativos y no pretende sustituir el consejo proporcionado por su propio veterinario u otro
+                profesional veterinario. No debe utilizar la información contenida en este documento para diagnosticar
+                la salud o problema o enfermedad de una mascota. Siempre debe consultar a su propio veterinario y / o
+                asesores veterinarios.
+
+                <br>
+
+                8. Limitación de responsabilidad
+
+                Pawchontli y / o cualquier otra parte involucrada en la creación, producción o entrega de este sitio web
+                en nuestro nombre no tendrá responsabilidad alguna por daños, costos, pérdidas o responsabilidades
+                directas, incidentales, consecuentes, indirectas, especiales o punitivas, y como sea que surja de su
+                acceso, uso, incapacidad de usar, cambio en el contenido de este sitio web o que surja de cualquier otro
+                sitio web al que acceda a través de un enlace desde este sitio web o en la medida permitida por la ley
+                aplicable, de cualquier acción que tomemos o no. tomar como resultado de cualquier mensaje de correo
+                electrónico que nos envíe.
+
+                Pawchontli no tendrá la responsabilidad de mantener el material y los servicios disponibles en este
+                sitio web o de proporcionar correcciones, actualizaciones o publicaciones en relación con los mismos.
+                Cualquier material de este sitio web está sujeto a cambios sin previo aviso.
+
+                Además, Pawchontli no tendrá responsabilidad alguna por cualquier pérdida sufrida causada por virus que
+                puedan infectar su equipo informático u otra propiedad debido a su uso, acceso o descarga de cualquier
+                material de este sitio web. Si elige descargar material de este sitio web, lo hace bajo su propio
+                riesgo.
+
+                Aunque Pawchontli puede monitorear o revisar de vez en cuando discusiones, chats, publicaciones,
+                transmisiones, tableros de anuncios y similares en el Sitio, Petfinder no tiene la obligación de hacerlo
+                y no asume responsabilidad alguna que surja del contenido de tales ubicaciones que incluyen, entre
+                otras, cualquier error, difamación, calumnia, calumnia, omisión, falsedad, obscenidad, pornografía,
+                blasfemias, peligro o inexactitud contenida en cualquier información dentro de dichas ubicaciones en el
+                Sitio.
+
+                En la medida máxima permitida por la ley aplicable, renuncia expresamente a todos los reclamos contra
+                Pawchontli, sus funcionarios, directores, empleados, proveedores y programadores que puedan surgir de su
+                uso o acceso a este sitio web.
+
+                <br>
+
+                9. Actividades prohibidas
+
+                Tiene prohibido realizar cualquier acto que Pawchontli, a su absoluta discreción, pueda considerar
+                inapropiado y / o se considere un acto ilegal o esté prohibido por las leyes aplicables a este sitio
+                web, incluidas, entre otras, las siguientes:
+
+                • Cualquier acto que constituya una violación de la privacidad (incluida la carga de información privada
+                sin el consentimiento de la persona en cuestión) o cualquier otro de los derechos legales de las
+                personas.
+
+                • Usar este sitio web para difamar o calumniar a Pawchontli, sus empleados u otras personas o actuar de
+                tal manera que desacredite el buen nombre de Pawchontli;
+
+                • Cargar archivos que contienen virus que pueden causar daños a la propiedad de Pawchontli o la
+                propiedad de otras personas; y
+
+                Publicar o transmitir en este sitio web cualquier material no autorizado, incluido, entre otros,
+                material que, en nuestra opinión, pueda causar molestias, perjudicar o violar los sistemas de Petfinder
+                o de terceros o la seguridad de la red, calumnioso, difamatorio, racista, obsceno, amenazante,
+                pornográfico, profano o ilegal.
+
+                <br>
+
+                10. Servicios móviles
+
+                Si Pawchontli le permite o pone a su disposición la capacidad de: (a) cargar contenido en el sitio web a
+                través de su teléfono móvil y / o tableta ("dispositivo móvil"), (b) recibir y responder mensajes, o
+                acceder o realizar publicaciones mediante mensajes de texto, (c) navegar por el sitio desde su
+                dispositivo móvil o (d) acceder a funciones a través de una aplicación móvil que haya descargado e
+                instalado en su dispositivo móvil (colectivamente "Servicios móviles"), los datos estándar de su
+                operador de telefonía móvil, Internet, Se aplican tarifas y cargos por mensajería y otros servicios a su
+                uso y acceso a los Servicios móviles, y usted es el único responsable de dichas tarifas y cargos. Es
+                posible que los Servicios móviles no sean compatibles con todos los dispositivos móviles, operadores y
+                servicios, y Pawchontli no hace ninguna representación ni garantía con respecto a dicha compatibilidad.
+                Usted es el único responsable de asegurarse de que su dispositivo móvil sea compatible con el tipo de
+                contenido que se proporciona a través de los Servicios móviles. Usted comprende que el contenido
+                entregado como parte de los Servicios móviles puede entregarse en su dispositivo a través de servicios
+                móviles premium y reconoce que es el único y exclusivo responsable de los cargos por dichos servicios,
+                incluidos, entre otros, los cargos de itinerancia.
+
+                Es posible que tenga la opción de registrarse para recibir mensajes comerciales de Pawchontli a través
+                de su dispositivo móvil. Usted comprende que su proveedor de servicios inalámbricos puede cobrarle en
+                relación con la recepción de dichos mensajes. Puede "optar por no recibir mensajes futuros" siguiendo
+                las instrucciones proporcionadas (i) en los mensajes inalámbricos o (ii) en el sitio web donde se
+                registró para recibir dichos mensajes.
+
+                <br>
+
+                12. Jurisdicción y ley aplicable
+
+                Este sitio web está ubicado y es operado desde los Estados Unidos Mexicanos. Su uso y acceso a este
+                sitio web se regirá por las leyes de México. Para obtener información sobre cómo tratamos la
+                recopilación de datos y la transferencia de información de identificación personal desde países o
+                jurisdicciones fuera de los EE. UU., Consulte nuestra Política de privacidad.
+
+                Usted y Pawchontli acuerdan que cualquier controversia o reclamo que surja de o pertenezca al uso de
+                este sitio web se regirá por las leyes del estado de México.
+
+                <br>
+
+                13. Actualización del aviso legal
+
+                Nos reservamos el derecho de realizar cambios y correcciones a este aviso. Consulte esta página de vez
+                en cuando para revisar esta y la nueva información adicional.
+        </p>
+    </div>
 </main>
 
 <footer text-center>
