--- a/privacy.html
+++ b/privacy.html
@@ -19,7 +19,7 @@
     <header>
         <div class="nav-bar d-flex flex-row align-items-center justify-content-between px-3">
             <div>
-                <a href="">
+                <a href="index.html">
                     <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="" style="width: 5em;">
                 </a>
             </div>
@@ -51,7 +51,87 @@
     </nav>
 
 <main>
-    <div>ola ke ase</div>
+    <div class="px-5">
+        <h1>
+            Política de privacidad de Pawchontli
+        </h1>
+        <p>
+ALCANCE DE ESTA NOTA
+
+Por favor lea esta nota (“Nota”) cuidadosamente para entender nuestras políticas y prácticas respecto a sus Datos Personales y cómo los trataremos. Esta Nota se aplica a todos los individuos que interactúan con los servicios de Pawchontli como consumidores (“usted”) Esta Nota explica cómo sus Datos Personales son recopilados, utilizados, y descargados por Pawchontli. También le dice cómo puede acceder y actualizar su Información Personal y tomar ciertas decisiones sobre cómo son utilizados sus Datos Personales.
+
+Esta Nota cubre ambas, nuestra recolección de datos en línea y fuera de línea, incluyendo Datos Personales que Nosotros recolectamos por medio de nuestros canales varios cuentos como sitios web, aplicaciones, terceras partes redes sociales, Oficina de Asuntos del Consumidor, puntos de venta y eventos donde esta política es provista a usted. Por favor note que Nosotros podríamos combinar datos personales de distintas fuentes (sitios, web, eventos fuera de línea). Como parte de esto, Nosotros combinamos Datos Personales que han sido recolectados originalmente por distintas entidades de Nestlé o asociados de Nestlé Nosotros podemos combinar información de terceras partes con información que Nosotros ya poseemos.
+
+Si usted no provee los Datos Personales necesarios a Nosotros (Nosotros le indicaremos cuándo sea el caso, por ejemplo, proveyendo esta información en nuestros formularios de inscripción), Nosotros no podremos proveer a usted ciertos bienes y / o servicios.
+
+<br>
+
+1. DATOS PERSONALES QUE NOSOTROS RECOLECTAMOS ACERCA DE USTED
+
+Nosotros recolectamos varios tipos de información de usted, tal como lo descripto debajo.
+
+Pagos e Información Financiera: Cualquier información que necesitemos para poder procesar una orden, o que usted use para hacer una compra, tal como detalles de tarjeta de débito o crédito (nombre del portador de tarjeta, número de tarjeta, fecha de vencimiento, etc. .) u otras formas de pago (si tales se ponen a disposición). Esta incluye cualquier información que usted proporcione a Nosotros que nos podríamos contactar, tal como su nombre, área postal, dirección de correo electrónico, detalles de redes sociales, o número de teléfono.
+
+Información acceso de cuenta. Cualquier información que sea requerida para darle acceso al perfil específico de su cuenta. Los ejemplos incluyen su ID de acceso / dirección e-mail, nombre de pantalla, contraseña en forma irrecuperable, y / o pregunta y respuesta de seguridad.
+
+Información demográfica e intereses. Cualquier información que describa sus características demográficas y de comportamiento. Los ejemplos incluyen su fecha de nacimiento, edad o rango de edad, género, ubicación geográfica (ej. Área postal), productos favoritos, hobbies e intereses, e información acerca del núcleo familiar y estilo de vida. Puede incluir información acerca del estado laboral, credenciales profesionales. Puede incluir información de cuando pregunta acerca de adoptar una mascota a una organización de adopción miembro de Pawchontli, o crear un alerta de búsqueda de mascota guardada. En algunos casos, esto podría incluir información que Nos da sobre alguien más. Por ejemplo, si usted proporciona la dirección de correo electrónico de un amigo para un programa de dile a un amigo. También puede incluir información acerca de sus mascotas y preferencias de mascotas. Si usted es un profesional del cuidado de la salud, podemos recolectar información acerca de su práctica.
+
+Información de computadoras / dispositivos móviles. Cualquier información acerca de sistemas de computadoras u otros dispositivos tecnológicos que usted utilice para acceder a alguno de nuestros sitios web o aplicaciones, tales como direcciones de protocolos de Internet (IP) utilizados para conectar su computadora o dispositivo a Internet, tipo de sistema operativo y tipo de navegador web y versión. Si usted accede al sitio web o aplicación de Nestlé vía un dispositivo móvil tal como un teléfono inteligente, la información recolectada también incluirá, donde sea permitido, ID única del dispositivo de su teléfono, ID publicitaria, ubicación geográfica, y otros datos similares del dispositivo móvil.
+
+Sitios web/uso de información de comunicación. Mientras navega a través e interactúa con nuestros sitios web/aplicaciones o e-mails, Nosotros utilizamos tecnologías automáticas de recolección de datos para recolectar cierta información acerca de sus acciones.  Esto incluye información tal como qué enlaces usted presiona, qué páginas o contenidos usted mira y por cuánto tiempo, y otra información similar y estadísticas acerca de sus interacciones, tales como el tiempo de respuestas de contenido, errores de descarga y duración de visitas de ciertos sitios.  Esta información es capturada utilizando tecnologías automatizadas tales como cookies o contenedores de visita y también es recolectada por medio del uso de rastreo de terceras partes para propósitos analíticos y publicitarios.
+Investigación de mercado & feedback de consumidor. Cualquier información que usted comparta con Nosotros acerca de su experiencia utilizando nuestros productos y servicios.
+Contenido generado por el consumidor. Cualquier contenido que usted cree y después comparta con Nosotros en redes sociales de terceras partes o cargándolo en alguno de nuestros sitios web o aplicaciones, incluyendo el uso de aplicaciones de redes sociales de terceras partes tales como Facebook. Ejemplos incluyen fotos, videos, historias personales, u otros medios o contenidos similares. Donde sea permitido, Nosotros recopilamos y publicamos contenido generado por el consumidor conectado con una variedad de actividades, incluyendo concursos y otras promociones, elementos de sitios de web de la comunidad, participación del consumidor, y participación en redes sociales de terceras partes.
+Información de red social de terceras partes. Cualquier información que usted comparta públicamente en redes sociales de terceras partes o información que es parte de su perfil en una red social de una tercera parte (tal como Facebook) y que usted permite que la red social de la tercera parte comparta con Nosotros. Ejemplos incluyen la información básica de su cuenta (ej. nombre, dirección de e-mail, género, fecha de nacimiento, ciudad actual, foto de perfil, ID usuario, lista de amigos, etc.) y cualquier información adicional o actividad que usted autoriza que la red social de la tercera parte comparta. Recibimos la información de perfil de la red social de su tercera parte (o parte) cada vez que usted descarga o interactúa con una aplicación web de Nestlé en la red social de una tercera parte tal como Facebook, cada vez que usted utiliza la función que está integrada dentro de un sitio de Nestlé (tal como Facebook Connect) o cada vez que usted interactúa con Nosotros a través de la red social de una tercera parte. Para saber más acerca de cómo es obtenida su información de la red social de una tercera parte por Nestlé, o para optar salir de la participación tal información de las redes social, por favor visite nuestro sitio de web de relevancia de red social de terceras partes.
+Pagos e Información Financiera. Cualquier información que Nosotros necesitemos para poder procesar una orden, o que usted use para hacer una compra, tal como detalles de tarjeta de débito o crédito (nombre del portador de tarjeta, número de tarjeta, fecha de vencimiento, etc.) u otras formas de pago (si tales se ponen a disposición). En cualquier caso, Nosotros o nuestro(s) proveedor(es) de procesamiento de pago tratamos pagos e información financiera obedeciendo las leyes aplicables, regulaciones y estándares de seguridad tales como PCI DSS.
+ 
+<br>
+ 
+2. COMO RECOLECTAMOS DATOS PERSONALES ACERCA DE USTED
+Nosotros recolectamos información directamente de usted.Por ejemplo, Nosotros recolectamos información cuando realiza una orden con nosotros.  Nosotros recolectamos información cuando se registra en uno de nuestros sitios web o aplicaciones. Nosotros recolectamos información cuando usted se hace miembro de nuestro programa de lealtad. Nosotros recolectamos información cuando usted se registra para nuestros e-mails. Nosotros recolectamos información de inscripciones o formas similares de inscripción impresas o digitales que Nosotros recolectamos vía, por ejemplo, correspondencia demostraciones en tiendas, concursos, u otras promociones o eventos. Nosotros recolectamos información cuando consulta acerca de adoptar a una mascota a través de una organización miembro de adopción de Pawchontli o crea un alerta de búsqueda de mascota guardada. Nosotros recolectamos información si usted llena una encuesta o usa otras herramientas en nuestros sitios web o aplicaciones. Nosotros también recolectamos información si usted Nos contacta por medio de nuestros sitios web o aplicaciones, vía e-mail o a través de las redes sociales.
+Nosotros recolectamos información acerca de usted pasivamente. Por ejemplo, Nosotros utilizamos herramientas de rastreo como cookies de navegación y contadores de web. Nosotros hacemos esto en nuestros sitios web y en e-mails que Nosotros mandamos a usted. Nosotros recolectamos información acerca de usuarios a lo largo del tiempo cuando usted usa este sitio web. Esto incluye información del uso y navegación. Podemos hacer que terceras partes recolecten información de esta forma. Nosotros también recolectamos información de nuestras aplicaciones móviles.
+Nosotros obtenemos información acerca de usted de otras fuentes.Por ejemplos, nuestros asociados o socios comerciales pueden darNos información acerca de usted. Nosotros podemos recibir información de compañías que compilan información acerca de compradores y sus preferencias. Las plataformas de redes sociales también pueden darNos información acerca de usted. Nosotros podemos obtener información acerca de sus interacciones con nuestros avisos en sitios de terceras partes.
+ 
+
+ <br>
+
+3. DATOS PERSONALES DE NIÑOS
+Nosotros no solicitamos ni recopilamos a sabiendas datos personales de niños menores de 13 años de edad. Si usted es un padre o el tutor legal y cree que su niño/a menor de 13 años ha dado a Nosotros información, usted puede contactarNos por escrito o por e-mail como esta provisto debajo bajo la sección titulada CONTACTO. Por favor marque sus consultas  “COPPA Information Request.” Puede aprender más acerca de como proteger la privacidad de los niños en linea visitando el sitio de web de la Comisión Federal de Comercio.
+ 
+<br>
+ 
+4. USOS HECHOS PARA SUS DATOS PERSONALES
+Los siguientes párrafos describen los varios propósitos para los que Nosotros recolectamos y utilizamos sus Datos Personales, y los distintos tipos de Datos Personales que recopilamos para cada propósito. Por favor note que no todos los usos debajo serán relevantes para cada individuo.
+Servicios del Consumidor. Nosotros utilizamos sus Datos Personales para propósitos de servicios al consumidor, incluyendo respondiendo sus consultas. Esto típicamente requiere el uso de cierto tipo de información personal de contacto e información respecto al motivo por el cual usted consulta (ej. estado de la orden, problema técnico, pregunta/queja de producto, pregunta general, etc.).
+Concursos, marketing y otras promociones. Nosotros podemos usar sus Datos Personales para proveerle con la información acerca de bienes o servicios (ej. comunicaciones de marketing o campañas o promociones). Esto puede ser hecho vía medios tales como e-mail, publicidades, SMS, llamadas telefónicas o correspondencia en al medida en que este permitido por leyes aplicables. En ocasiones, estas comunicaciones también pueden presentarle a usted otras marcas asociadas y socios e informar a usted sobre productos, servicios, ofertas, y promociones de otras compañías y organizaciones. Algunas de nuestras campañas y promociones están organizadas en sitios web y/o redes sociales. Para más información sobre nuestros concursos y otras promociones, por favor vea nuestras reglas oficiales o detalles publicados con cada concurso/promoción.  Nosotros también podemos utilizar el e-mail de su amigo/a para enviarle la información que usted requirió por medio del la función “dile a un amigo”.
+Redes sociales de terceras partes: Nosotros utilizamos sus Datos Personales cuando usted interactua con elementos de redes sociales de terceras partes, tales como funciones “Me gusta”, para servirle de publicidad e interactuar con usted en redes sociales de terceras partes. Usted también puede aprender más acerca de cómo funcionan estos elementos, los datos de perfil que Nosotros obtenemos acerca de usted, y averiguar cómo renunciar revisando las notas de privacidad de las redes sociales de terceras partes relevantes.
+Personalización. Con su consentimiento (donde sea requerido), Nosotros podemos utilizar sus Datos Personales (i) para analizar sus preferencias y hábitos, (ii) para anticipar sus necesidades en nuestro análisis de su perfil, (iii) para mejorar y personalizar su experiencia en nuestros sitios de web y aplicaciones; (iv) para asegurar que el contenido de nuestros sitios de web/aplicaciones sean optimizados para usted y para su computadora o dispositivo; (v) para proveer a usted publicidad y contenido dirigido, y (vi) para permitir que usted participe en funciones interactivas, cuando usted así lo elija. Por ejemplo, Nosotros recordamos su ID de acceso/dirección de e-mail o nombre de pantalla para que usted pueda ingresar rápidamente la próxima vez que visite nuestro sitio o así puede recuperar estos elementos que usted ingresó previamente en su canasta de compras. Basado en este tipo de información, y con su consentimiento (donde sea requerido), Nosotros también le mostramos contenido específico de Nestlé y publicidad que están adaptados a a sus intereses.
+Cumplimiento de pedidos. Nosotros utilizamos sus Datos Personales para procesar y enviar sus ordenes, informar a usted sobre el estado de sus ordenes, corregir direcciones y conducir verificación de identidad y otras actividades de detección de fraude. Esto involucra el uso de ciertos Datos Personales e información de pago.
+Otros propósitos generales (ej. investigaciones internas o de mercado, analítica, seguridad). En cumplimiento con leyes aplicables, Nosotros utilizamos sus Datos Personales para otros propósitos generales de negocios, tales como mantener su cuenta, conducir investigaciones internas o de mercado y medir la efectividad de las campañas de publicidad. Nos reservamos el derecho, si tiene cuentas Nestlé, de reconciliar esas cuentas en una cuenta singular. También utilizamos sus Datos Personales para el gerenciamiento y operación de nuestras comunicaciones, IT y sistemas de seguridad.
+<br>
+ 
+5. PROTECCIÓN Y RETENCIÓN DE DATOS
+Nosotros utilizamos medidas de seguridad razonable y apropiada tal como lo requieren las leyes aplicables. La transmisión de información vía Internet no es, desafortunadamente, completamente segura y a pesar de nuestros esfuerzos por proteger sus Datos Personales, Nosotros no podemos garantizar la seguridad de los datos durante la transmisión a través de nuestros sitios web/aplicaciones.Es importante que usted desempeñe un papel en mantener sus Datos Personales a salvo y seguros. Cuando se registra en una cuenta en línea, por favor asegúrese de elegir una contraseña que sea difícil para otros adivinar y nunca revele su contraseña a nadie más. Usted es responsable de mantener su contraseña confidencial y por el uso de su cuenta. Si usted utiliza una computadora compartida o pública, nunca elija que recuerde su ID de inicio/dirección de e-mail o contraseña y asegúrese de cerrar la sesión de su cuenta cada vez que deja la computadora. Usted también debería hacer uso de las configuraciones o controles de seguridad que Nosotros le proveemos en nuestros sitios de web/aplicaciones.
+Retención de Datos Personales Nosotros mantenemos sus Datos Personales siempre que sea necesario o relevante para las prácticas descritas en esta Nota. Nosotros también mantenemos los Datos Personales como lo requiere la ley.
+ 
+<br>
+ 
+6. SUS OPCIONES SOBRE COMO USAR Y DIVULGAR SUS DATOS PERSONALES
+Nos esforzamos para proveer a usted de opciones respecto a los Datos Personales que usted Nos provee. Los siguientes mecanismos le dan el siguiente control sobre sus Datos Personales:
+Publicidad, marketing y promociones.  Usted puede optar salir de e-mails de marketing siguiendo las instrucciones provistas en cada una de tales comunicaciones. Por favor note que si bien usted opte salir de recibir comunicaciones de marketing, usted todavía recibirá comunicaciones administrativas de Nosotros, tales como confirmaciones de ordenes u otras transacciones, notificaciones sobre sus actividades de cuenta (ej. confirmaciones de cuenta, cambios de contraseña, confirmación de consulta  y presentación de adopción de mascotas, etc.), y otros anuncios importantes no relacionados al marketing.
+Cookies, Herramientas de Rastreo y Publicidad Orientada. Para saber manejar cómo Nosotros y nuestros proveedores usan cookies u otras herramientas de rastreo, y para leer nuestra Política de No Rastreo.
+ 
+<br>
+ 
+7. SITIOS WEB Y SERVICIOS DE TERCERAS PARTES
+Nosotros podemos estar enlazados a sitios de web o aplicaciones, incluyendo plataformas de redes sociales. Nuestros sitios web o aplicaciones pueden también incluir contenido que recopila información. Esto incluye información recopilada por cookies, pixels, u otras herramientas de rastreo. Nosotros no controlamos estas terceras partes o sus herramientas de rastreo. Esta política no se aplica a las prácticas de privacidad de los sitios web o aplicaciones de estas terceras partes. Por favor lea las políticas de privacidad de otros sitios web y aplicaciones cuidadosamente. Nosotros no somos responsables por las prácticas de los sitios de web o aplicaciones de estas terceras partes.
+ 
+<br>
+ 
+8. CAMBIOS DE ESTA NOTA
+Si Nosotros cambiamos la forma en que Nosotros manejamos sus Datos Personales, Nosotros vamos a actualizar esta Nota. Nos reservamos el derecho a hacer cambios a nuestras prácticas y esta Nota en cualquier momento, por favor revise nuevamente frecuentemente para ver actualizaciones o cambios a nuestra Nota.
+ 
+        </p>
+    </div>
 </main>
 
 <footer text-center>
