--- a/about.html
+++ b/about.html
@@ -32,10 +32,28 @@
     </header>
 
     <main>
-        <div>
+        <div class="px-5 pt-4">
             <h1>
-                Acerca
+                Acerca de Pawchontli
             </h1>
+            <div class="d-inline-flex">
+                <p class="pe-5 text-justify pt-4">
+                    Pawchontli es una aplicación web que funge como el enlace entre los albergues que tengan mascotas para
+                    adoptar y las personas que deseen adoptar una mascota.
+                    Nos dimos a la tarea de investigar los diferentes procesos que hay para la adopción de una mascota,
+                    mediante un albergue de mascotas. Y fue ahí cuando detectamos el problema, los albergues que se dedican
+                    al rescate de animales la mayoría de las veces no tienen el alcance para llegar a muchas personas, ya
+                    sea porque no tienen sitios web, no tienen tiempo para crear publicidad o no tienen los recursos. Y las
+                    personas que buscan adoptar una mascota no tienen el conocimiento de cuántas asociaciones hay en la
+                    ciudad que viven y por falta de información no acuden a realizar la adopción.
+                    A través de la historia, las mascotas han sido grandes compañeras de la vida de las personas,
+                    compartiendo alegrías, pero también ayudando a superar momentos difíciles.
+                    Adoptar es un gran paso. Por eso queremos
+                    ayudarte para que ésta sea una de las mejores experiencias en tu vida y la de tu próximo amigo de cuatro
+                    patas.
+                </p>
+                <img src="assets/img/pexels-ivan-samkov-6291576.jpg" alt="" style="width: 50vw; border-radius: 2em; " class="mt-4">
+            </div>
         </div>
         <p>
 
@@ -87,12 +105,12 @@
         </div>
     </footer>
 
-    
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-        crossorigin="anonymous"></script>
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
+    </script>
     <script src="js/main.js"></script>
 </body>
 
