--- a/createPet.html
+++ b/createPet.html
@@ -152,8 +152,7 @@
                                 class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap"> Sube una foto
                                 de la mascota.
                             </label>
-                            <input type="file" class="input-picture josefinsans-normal-chetwode-blue-16px" id="image"
-                                type="file" accept="image/*">
+                            <input type="file" class="input-picture josefinsans-normal-chetwode-blue-16px" id="image">
                         </div>
                         <div class="d-flex justify-content-center pt-5">
                             <input type="submit" value="Agregar mascota"
